<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">东大淘</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">东大淘</string>
    <string name="login_button">登陆</string>
    <string name="register_button">手机注册</string>
    <string name="username_text">用户名</string>
    <string name="pwd_text">密码</string>
    <string name="register_title">注册信息</string>
    <string name="register_account">手机号</string>
    <string name="register_password">密码</string>
    <string name="register_pwdagain">确认密码</string>
    <string name="register_button_commit">下一步</string>  
    <string name="feedback_button_commit">提交</string>
    <string name="feedback_hint">请输入您遇到的问题或对我们的意见和建议</string>
    <string name="home_page_search_button">搜索</string>
    <string name="home_page_introgoods_button">推荐商品</string>
    <string name="home_page_latestneeds_button">最新求购</string>
    <string name="homepage_name">HomePage</string>
    <string name="up_goods_page_one_firststep">第一步：上传照片</string>
    <string name="up_goods_page_two_secondstep">第二步：填写信息</string>
    <string name="up_needs_page_above_title">填写求购信息</string>
    <string name="up_goods_page_one_commit">下一步</string>
    <string name="up_goods_goodsName">商品名称</string>
    <string name="up_needs_needsTitle">求购标题</string>
    <string name="up_goods_price">商品价格</string>
    <string name="up_goods_boughtTime">入手时间</string>
    <string name="up_goods_goodsClassify">所属分类</string>
    <string name="up_goods_goodsSchoolAddress">所在校区</string>
    <string name="up_goods_goodsDescription">信息描述</string>
    <string name="up_goods_picker_boughtTime">选择日期</string>
    <string name="up_goods_picker_selectClassify">所属分类</string>
    <string name="upgoodspage_name">upGoodsPage</string>
    <string name="upgoodstwopage_name">upGoodsPageTwo</string>
    <string name="title_activity_up_needs_page">UpNeedsPage</string>
    <string name="title_activity_published_success_page">PublishedSuccessPage</string>
    <string name="publish_success_title1">尊敬的</string>
    <string name="pubish_success_gotoGoodsDetail">查看商品</string>
    <string name="publish_success_gotoHome">回到首页</string>
    <string name="register_phone_hint">请输入您的手机号码</string>
    <string name="login_username_hint">请输入您的手机号</string>
    <string name="login_pwd_hint">请输入您的密码</string>
    <string name="register_pwd_hint">输入5到15位字母或数字作为密码</string>
    <string name="regiser_confirm_hint">请填写验证码</string>
    <string name="register_wrongphone_warn">您输入的手机号码有误</string>
    <string name="register_wrongpwd_warn">您输入的密码长度非法</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="tpl_ok">确定</string>
    <string name="tpl_cancel">取消</string>
    <string name="tpl_key_user_icon">头像</string>
    <string name="tpl_key_user_name">昵称</string>
    <string name="tpl_key_user_note">备注</string>
    <string name="tpl_value_user_name">昵称</string>
    <string name="tpl_value_user_gender">性别</string>
    <string name="tpl_value_user_note">请填写备注信息</string>
    <string name="tpl_sign_user_info">用户信息</string>
    <string name="tpl_sign_up">注册</string>
    <string name="register_detailInfo_girl">女</string>
    <string name="register_detailInfo_boy">男</string>
    <string name="tpl_camera">拍照</string>
    <string name="tpl_picture">从相册获取</string>
    <string name="register_input_user_name_hint">请填写昵称</string>
    <string name="register_input_user_phone_hint">请填写您的手机号码</string>
    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="tpl_msg_login_hint">请输入手机号码</string>
    <string name="tpl_verify_code_hint">请输验证码</string>
    <string name="tpl_get_verify_code">获取验证码</string>
    <string name="tpl_send_verify_code">检验验证码</string>
    <string name="title_activity_register_detail_info">RegisterDetailInfo</string>
    <string name="register_confirm_tag">RegisterConfirm</string>
    <string name="hello_world">Hello world!</string>
    <string name="register_resend_button">重新发送验证码(60)</string>
    <string name="register_commmitword_button">确定</string>
    <string name="register_page_tips_word">或者用下列合作账号登陆：</string>
    <string name="register_confirminfo_button">完成</string>
    <string name="title_activity_main_tab_container">MainTabContainer</string>
    <string name="title_activity_person_info_page">PersonInfoPage</string>
    <string name="title_activity_collected_page">CollectedPage</string>
    <string name="title_activity_settings_page">SettingsPage</string>
    <string name="title_activity_person_detail_info_page">PersonDetailInfoPage</string>
    <string name="title_activity_pubished_page">PubishedPage</string>
    <string name="title_activity_published_goods_list">PublishedGoodsList</string>
    <string name="title_activity_person_edit_info_page">PersonEditInfoPage</string>
    <string name="title_activity_privilege_page">PrivilegePage</string>
    <string name="title_activity_delay_time_page">DelayTimePage</string>
    <string name="title_activity_select_month_page">SelectMonthPage</string>
   <string name="title_activity_feedback_page">FeedbackPage</string>
    <string name="title_activity_blank_page">BlankPage</string>
    <string name="up_needs_needsPrice">求购价格</string>
    <string name="kinds_page_bar">东大淘</string>
    <string name="kinds_page_remen_lable">热门分类</string>
    <string name="kinds_page_suoyou_lable">所有分类</string>
    <string name="title_activity_goods_list_page">GoodsListPage</string>
    <string name="back">返回</string>
    <string name="title_activity_goods_detail_info_page">GoodsDetailInfoPage</string>
    <string name="title_activity_news_page">NewsPage</string>
    <string name="title_activity_needs_list_page">NeedsListPage</string>
    <string name="title_activity_needs_detail_info_page">NeedsDetailInfoPage</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_kinds">KindsActivity</string>
    <string name="descr_image">Image</string>
    <string name="title_activity_search_result_page">SearchResultPage</string>
    <string name="up_goods_oldstate">新旧程度</string>
    <string name="title_activity_person_movment_page">PersonMovmentPage</string>
    <string name="title_activity_up_goods_and_want_page">UpGoodsAndWantPage</string>
    <string name="title_activity_connect_seller_page">ConnectSellerPage</string>

</resources>