<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_page_topimg"
        android:name="loginTitle"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/loginlogo" />

    <LinearLayout
        android:id="@+id/login_page_inputlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_page_topimg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/Login_userName"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/inputview"
                android:hint="@string/login_username_hint"
                android:inputType="number"
                android:paddingLeft="40dp"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@id/Login_userName"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:src="@drawable/phoneicon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/Login_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/inputview"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:paddingLeft="40dp"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@id/Login_pwd"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:src="@drawable/pwdicon" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/Login_page_loginButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_page_inputlayout"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/register_page_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="50dp" >

        <Button
            android:id="@+id/login_loginbyRenRen"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:background="@drawable/loginrenren" />

        <Button
            android:id="@+id/login_loginbySinaWeibo"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/loginweibo" />

        <Button
            android:id="@+id/login_loginbyQQ"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:background="@drawable/loginqq" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/register_page_bottom"
        android:layout_marginBottom="20dp" >

        <ImageView
            android:id="@+id/register_page_firstline"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/line_" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register_page_tips_word"
            android:textColor="@color/gray" />

        <ImageView
            android:id="@+id/register_page_secondilne"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/line_" />
    </RelativeLayout>

    <Button
        android:id="@+id/Login_page_RegisterButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/Login_page_loginButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/yellobuttonshape"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>